--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <div class="card-body">
     <h5 class="card-title">Power Bank</h5>
     <h3 style="color: green">80$</h3>
-    <p class="card-text">A battery charger, or recharger,[ is a device used to put energy into</p>
+    <p class="card-text">A battery charger, or recharger, is a device used to put energy into</p>
     <a href="card.html" class="btn btn-primary">Add to Card</a>
   </div>
 </div>
